[gd_scene load_steps=19 format=3 uid="uid://cmb5pd30vmgrj"]

[ext_resource type="Script" path="res://Scripts/Singletons/UIManager.gd" id="1_5hhj1"]
[ext_resource type="LabelSettings" uid="uid://bk5shiiffogwf" path="res://Fonts/LabelSettings/BigTextSettings.tres" id="2_kd83p"]
[ext_resource type="PackedScene" uid="uid://cojbk6x81ge2g" path="res://Scenes/UI/player_hud.tscn" id="3_wtxsu"]
[ext_resource type="LabelSettings" uid="uid://cyqvslvjkjojq" path="res://Themes/ModernBigTextLabelSettings.tres" id="4_dyrok"]
[ext_resource type="FontFile" uid="uid://8m065evukno3" path="res://Fonts/NbPixelFontBundle/KarenFat.ttf" id="12_0dudm"]
[ext_resource type="Script" path="res://Scenes/Singletons/GameOverScreen.gd" id="12_s46kg"]
[ext_resource type="PackedScene" uid="uid://vspn7m7psh1b" path="res://Scenes/UI/tv_screen.tscn" id="13_aei8d"]
[ext_resource type="Script" path="res://Scenes/Singletons/MessageFromTopScreen.gd" id="14_gkw5u"]
[ext_resource type="Script" path="res://Scenes/Singletons/TextEditLimiter.gd" id="14_p68ad"]
[ext_resource type="Theme" uid="uid://dgi4mcucy7t8i" path="res://Themes/MenuTheme.tres" id="17_71xji"]

[sub_resource type="Animation" id="Animation_kslu2"]
resource_name = "Countdown"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountdownText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1, 1.1, 1.4, 1.8, 2.1, 2.2, 2.5, 2.9, 3.2, 3.3, 3.6, 4, 4.3),
"transitions": PackedFloat32Array(1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0),
"update": 0,
"values": [Vector2(704, 0), Vector2(336, 0), Vector2(304, 0), Vector2(-64, 0), Vector2(704, 0), Vector2(336, 0), Vector2(304, 0), Vector2(-64, 0), Vector2(704, 0), Vector2(336, 0), Vector2(304, 0), Vector2(-64, 0), Vector2(752, 0), Vector2(336, 0), Vector2(304, 0), Vector2(-112, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CountdownText:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 2.2, 3.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", "START"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CountdownText:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.3, 4.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="Animation" id="Animation_j40tl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountdownText:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e5vrw"]
_data = {
"Countdown": SubResource("Animation_kslu2"),
"RESET": SubResource("Animation_j40tl")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ge3a8"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbe20"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jtfcy"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gro3s"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_anr0r"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="HUD" type="CanvasLayer" groups=["UIManager"]]
script = ExtResource("1_5hhj1")

[node name="Countdown" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountdownText" type="Label" parent="Countdown"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -28.0
offset_right = 140.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "START"
label_settings = ExtResource("2_kd83p")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CountdownAnimation" type="AnimationPlayer" parent="Countdown"]
speed_scale = 1.5
libraries = {
"": SubResource("AnimationLibrary_e5vrw")
}

[node name="PlayerHUD" parent="." instance=ExtResource("3_wtxsu")]

[node name="ScoreCounter" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.0
offset_right = 102.0
offset_bottom = 58.0
grow_horizontal = 2
text = "0"
label_settings = ExtResource("4_dyrok")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageFromTopScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_gkw5u")

[node name="TVScreen" parent="MessageFromTopScreen" instance=ExtResource("13_aei8d")]
layout_mode = 1
offset_left = 87.0
offset_top = 70.0
offset_right = -88.0
offset_bottom = -78.0

[node name="Panel2" type="Panel" parent="MessageFromTopScreen/TVScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ge3a8")

[node name="VBoxContainer" type="VBoxContainer" parent="MessageFromTopScreen/TVScreen/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 10.0
offset_right = -7.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="GameOverText" type="Label" parent="MessageFromTopScreen/TVScreen/Panel2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("17_71xji")
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Label" type="Label" parent="MessageFromTopScreen/TVScreen/Panel2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("17_71xji")
text = "You've made it to first place! Congratulations!
Type a message here and it will be shown to all players as the MESSAGE FROM THE TOP"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextEdit" type="TextEdit" parent="MessageFromTopScreen/TVScreen/Panel2/VBoxContainer"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("12_0dudm")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_rbe20")
theme_override_styles/focus = SubResource("StyleBoxFlat_jtfcy")
text = "I made it to the top!"
placeholder_text = "I made it to the top!"
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
middle_mouse_paste_enabled = false
script = ExtResource("14_p68ad")

[node name="SubmitButton" type="Button" parent="MessageFromTopScreen/TVScreen/Panel2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("17_71xji")
theme_override_fonts/font = ExtResource("12_0dudm")
text = "SUBMIT"

[node name="GameOverScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_s46kg")

[node name="TVScreen" parent="GameOverScreen" instance=ExtResource("13_aei8d")]
layout_mode = 1
grow_horizontal = 1
grow_vertical = 1

[node name="Panel2" type="Panel" parent="GameOverScreen/TVScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gro3s")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/TVScreen/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="GameOverText" type="Label" parent="GameOverScreen/TVScreen/Panel2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("17_71xji")
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ScoreLabel" type="Label" parent="GameOverScreen/TVScreen/Panel2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("17_71xji")
text = "SCORE: 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HighscoreLabel" type="Label" parent="GameOverScreen/TVScreen/Panel2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("17_71xji")
text = "HIGHSCORE: 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverScreen/TVScreen/Panel2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TryAgain" type="Button" parent="GameOverScreen/TVScreen/Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("17_71xji")
theme_override_fonts/font = ExtResource("12_0dudm")
theme_override_styles/focus = SubResource("StyleBoxFlat_anr0r")
text = "TRY AGAIN"

[node name="MainMenu" type="Button" parent="GameOverScreen/TVScreen/Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("17_71xji")
theme_override_fonts/font = ExtResource("12_0dudm")
theme_override_styles/focus = SubResource("StyleBoxFlat_anr0r")
text = "MAIN MENU"

[connection signal="text_changed" from="MessageFromTopScreen/TVScreen/Panel2/VBoxContainer/TextEdit" to="MessageFromTopScreen/TVScreen/Panel2/VBoxContainer/TextEdit" method="_on_text_changed"]
[connection signal="pressed" from="MessageFromTopScreen/TVScreen/Panel2/VBoxContainer/SubmitButton" to="MessageFromTopScreen" method="_on_submit_button_pressed"]
[connection signal="pressed" from="GameOverScreen/TVScreen/Panel2/VBoxContainer/HBoxContainer/TryAgain" to="GameOverScreen" method="_on_try_again_button_pressed"]
[connection signal="pressed" from="GameOverScreen/TVScreen/Panel2/VBoxContainer/HBoxContainer/MainMenu" to="GameOverScreen" method="_on_main_menu_button_pressed"]
